Bug 1018522 - Move the call to ShadowLayersUpdated before EndTransaction so that EndTransaction can pick up layer tree changes caused by ShadowLayersUpdated. r=mattwoodrow

--HG--
extra : rebase_source : 640af9f3ef2488e8bf10315787a7ed389771568e